# AgentVerse

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.trellis/: .template-hashes.json  config.yaml
.trellis/spec/agentverse-api/backend/: index.md
.trellis/spec/agentverse-crawler/backend/: index.md
.trellis/spec/agentverse-extractor/backend/: index.md
.trellis/spec/agentverse-graphrag/backend/: index.md
.trellis/tasks/00-bootstrap-guidelines/: prd.md  task.json
.trellis/workspace/freebytes/: index.md  journal-1.md
apps/api/: README.md  pyproject.toml
apps/api/src/agentverse/api/: main.py
apps/api/src/agentverse/api/api/v1/: batch.py  concepts.py  export.py  frameworks.py  health.py  keys.py  metrics.py  router.py  search.py  timeline.py  websocket.py
apps/api/src/agentverse/api/core/: auth.py  cache.py  config.py  context.py  dependencies.py  etag.py  events.py  key_management.py  metrics.py  middleware.py  query_monitor.py  rate_limiter.py  security.py  versioning.py
apps/api/src/agentverse/api/db/: neo4j.py  postgres.py
apps/api/src/agentverse/api/models/: pagination.py  request.py  response.py
apps/api/tests/: conftest.py  test_api.py  test_api_concepts.py  test_api_integration.py  test_api_rate_limiter.py  test_auth.py  test_cache.py  test_export_batch.py  test_health.py  test_metrics.py  test_search.py  test_security.py  test_versioning.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
apps/web/public/data/: knowledge_graph.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/compare/: page.tsx
apps/web/src/app/frameworks/: page.tsx
apps/web/src/app/graph/: page.tsx
apps/web/src/app/monitor/: page.tsx
apps/web/src/app/papers/: page.tsx
apps/web/src/app/roadmap/: page.tsx
apps/web/src/app/search/: page.tsx
apps/web/src/app/timeline/: page.tsx
apps/web/src/components/concept/: ConceptFrameworks.tsx  ConceptHeader.tsx  ConceptPapers.tsx  ConceptPath.tsx  ConceptRelations.tsx
apps/web/src/components/framework/: FrameworkCard.tsx  FrameworkModal.tsx  SimilarFrameworks.tsx
apps/web/src/components/graph/: GraphCanvas.tsx  GraphControls.tsx  Minigraph.tsx
apps/web/src/components/layout/: Footer.tsx  Header.tsx  Sidebar.tsx
apps/web/src/components/monitor/: ConceptRanking.tsx  EdgeTypeChart.tsx  (+2 more)
apps/web/src/hooks/: useFetch.ts  useFrameworks.ts  useGraphSearch.ts
apps/web/src/lib/: api.ts  compare.ts  i18n.ts  recommend.ts  search.ts
apps/web/src/types/: api.ts  graph.ts
apps/web/tests/: setup.ts  test-home.tsx
apps/worker/: README.md  pyproject.toml
apps/worker/src/agentverse/worker/: broker.py  config.py  lifecycle.py  main.py  scheduler.py
apps/worker/src/agentverse/worker/tasks/: crawl.py  extract.py  index.py
apps/worker/tests/: test_worker.py
datasets/: README.md  frameworks.json  papers.json  timeline.json
docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
docker/postgres/: init.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  BUSINESS_MODULES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  EXECUTION_PLAN.md
examples/: README.md
openspec/changes/upgrade-core-components/: design.md  proposal.md  tasks.md
openspec/specs/: api-spec.md  crawler-spec.md  extractor-spec.md  graphrag-spec.md  ontology-spec.md
scripts/: benchmark.py  bootstrap.sh  build_knowledge_graph.py  dev.sh  init_schema.py  run_pipeline.py  seed_data.py  setup_docker.sh  start.sh  test_extract.py  test_semantic_scholar.py
scripts/kg/: __init__.py  collector.py  exporter.py  graph.py
(+26 files in other folders)
