[project]
name = "agentverse-worker"
version = "0.1.0"
description = "AgentVerse background worker"
requires-python = ">=3.12"
dependencies = [
    "taskiq>=0.11,<1.0",
    "agentverse-shared",
    "agentverse-graph-core",
    "agentverse-ontology",
    "agentverse-crawler",
    "agentverse-extractor",
    "agentverse-graphrag",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentverse/worker"]